--- a/package.json
+++ b/package.json
@@ -1,34 +1,27 @@
 {
   "name": "gitcloud",
-  "version": "0.1.3",
+  "version": "0.2.0",
+  "engines": {
+    "node": ">= 10.0.0",
+    "npm": ">= 6.0.0"
+  },
   "description": "Client for GitCloud",
-  "main": "lib/index.js",
+  "main": "gitcloud.js",
   "directories": {
     "test": "test"
   },
   "scripts": {
-    "build": "babel src -d lib --source-maps",
-    "watch": "babel src -d lib --source-maps --watch",
-    "test": "npm run build && mocha --compilers js:babel-register"
+    "test": "mocha"
   },
   "author": "Goh Jia Hao",
   "license": "MIT",
   "dependencies": {
-    "axios": "^0.21.0",
-    "cheerio": "^0.20.0",
-    "source-map-support": "^0.4.0"
+    "axios": "^0.21.1",
+    "cheerio": "^1.0.0-rc.5"
   },
   "devDependencies": {
-    "babel-cli": "^6.6.4",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-register": "^6.6.0",
-    "chai": "^3.5.0",
-    "mocha": "^2.4.5"
-  },
-  "babel": {
-    "presets": [
-      "es2015"
-    ]
+    "chai": "^4.3.0",
+    "mocha": "^8.3.0"
   },
   "repository": {
     "type": "git",
